--- a/TrackerLibrary/TrackerLibrary.csproj
+++ b/TrackerLibrary/TrackerLibrary.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlConnector.cs" />
     <Compile Include="TeamModel.cs" />
+    <Compile Include="TextConnector.cs" />
     <Compile Include="TournamentModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
