--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<connectionStrings>
-		<add name="Tournaments" connectionString="Server=./sql2016;Database=Tournaments;Trusted_Connection=True;" providerName ="System.Data.SqlClient"/>
-	</connectionStrings>
+	<configSections>
+ </configSections>
+ <connectionStrings>
+	 <!--  <add name="Tournaments" connectionString="Server=sqlserver://;serverName=localhost;" providerName="System.Data.SqlClient" /> -->
+  <add name="TrackerUI.Properties.Settings.TournamentsConnectionString" connectionString="Data Source=localhost;Initial Catalog=Tournaments;Integrated Security=True" providerName="System.Data.SqlClient" />
+ </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -23,6 +26,22 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.2" newVersion="7.0.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Abstractions" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.24.0.0" newVersion="6.24.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Identity.Client" publicKeyToken="0a613f4dd989e8ae" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.47.2.0" newVersion="4.47.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Encodings.Web" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
