--- a/TrackerUI/TrackerUI.csproj
+++ b/TrackerUI/TrackerUI.csproj
@@ -52,6 +52,9 @@
   <PropertyGroup>
     <ApplicationIcon>tournament.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>TrackerUI.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Azure.Core, Version=1.25.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
       <HintPath>..\packages\Azure.Core.1.25.0\lib\net461\Azure.Core.dll</HintPath>
