--- a/TrackerLibrary/packages.config
+++ b/TrackerLibrary/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="2.0.138" targetFramework="net472" />
+  <package id="Dapper" version="2.0.143" targetFramework="net472" />
+  <package id="SkiaSharp" version="2.88.4-preview.76" targetFramework="net472" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="2.88.4-preview.76" targetFramework="net472" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="2.88.4-preview.76" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
 </packages>
