--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -3,8 +3,7 @@
 	<configSections>
  </configSections>
  <connectionStrings>
-	 <!--  <add name="Tournaments" connectionString="Server=sqlserver://;serverName=localhost;" providerName="System.Data.SqlClient" /> -->
-  <add name="TrackerUI.Properties.Settings.TournamentsConnectionString" connectionString="Data Source=localhost;Initial Catalog=Tournaments;Integrated Security=True" providerName="System.Data.SqlClient" />
+	         <add name="Tournaments" connectionString="Data Source=.;Initial Catalog=Tournaments;Integrated Security=True" providerName="System.Data.SqlClient"/>
  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
