--- a/TrackerLibrary/TrackerLibrary.csproj
+++ b/TrackerLibrary/TrackerLibrary.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums.cs" />
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="DataAccess\IDataConnection.cs" />
     <Compile Include="Models\MatchupEntryModel.cs" />
