--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -3,7 +3,7 @@
 	<configSections>
  </configSections>
  <connectionStrings>
-	         <add name="Tournaments" connectionString="Data Source=.;Initial Catalog=Tournaments;Integrated Security=True" providerName="System.Data.SqlClient"/>
+	         <add name="Tournaments" connectionString="Data Source=.;Database=Tournaments;Initial Catalog=Tournaments;Integrated Security=True" providerName="System.Data.SqlClient"/>
  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
