--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
- </configSections>
- <connectionStrings>
-	         <add name="Tournaments" connectionString="Data Source=.;Database=Tournaments;Initial Catalog=Tournaments;Integrated Security=True" providerName="System.Data.SqlClient"/>
- </connectionStrings>
-    <startup> 
+		
+	</configSections>
+
+	<appSettings>
+		<add key="filePath" value="C:\data\TournamentTracker\"/>
+	</appSettings>
+	
+	<connectionStrings>
+		<add name="Tournaments" connectionString="Data Source=.;Initial Catalog=Tournaments;Integrated Security=True" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+    
+	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <runtime>
